# EasyMinecraftServerAPI

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CODEOWNERS  README.md  SECURITY.md  pyproject.toml
EasyMinecraftServerAPI/: main.py
EasyMinecraftServerAPI/data/: openapi.json  software.py
