[project]
name = "EasyMinecraftServerAPI"
version = "0.0.3"
description = "API for EasyMinecraftServer"
authors = [
    {name = "Nucceteere",email = "ruzgar@nucceteere.xyz"}
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "requests (>=2.32.3,<3.0.0)",
    "javaproperties (>=0.8.2,<0.9.0)"
]

[project.urls]
homepage = "https://github.com/EasyMinecraftServer/EasyMinecraftServerAPI/blob/master/README.md"
repository = "https://github.com/EasyMinecraftServer/EasyMinecraftServerAPI"
documentation = "https://github.com/EasyMinecraftServer/EasyMinecraftServerAPI/wiki/"
"Bug Tracker" = "https://github.com/EasyMinecraftServer/EasyMinecraftServerAPI/issues"
"Contribute" = "https://github.com/EasyMinecraftServer/EasyMinecraftServerAPI/pulls"

[tool.poetry]
package-mode = false # https://python-poetry.org/docs/basic-usage/#operating-modes
requires-poetry = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
